[project]
name = "transportnsw-mcp"
version = "0.1.0"
description = "MCP server for Transport NSW API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "mcp[cli]>=1.4.1",
    "python-dateutil>=2.5.3",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
]

[project.scripts]
transportnsw-mcp = "api:mcp.run"

[tool.setuptools]
py-modules = ["api"]
